# pezzottify

./: .dockerignore  .gitignore  CLAUDE.md  DEVICE_ENTITY_PLAN.md  DEVICE_ENTITY_TODO.md  DOWNLOADER2_PLAN.md  EXTERNAL_SEARCH_PLAN.md  INVITE_TOKEN_DETAILED_PLAN.md  INVITE_TOKEN_PLAN.md  LICENSE  PLAN_CATALOG_SKELETON_SYNC.md  PLAN_EXTERNAL_CONTENT_SCREENS.md  PLAN_swappable_search.md  QUENTIN_TORRENTINO_INTEGRATION.md  QUENTIN_TORRENTINO_INTERFACE.md  README.md  SYNC_IMPLEMENTATION.md  SYNC_PLAN.md  TASKS_CATALOG_SKELETON_SYNC.md  TODO.md  WS_CONNECTION_PLAN.md  WS_IMPLEMENTATION.md  build-and-push.sh  build-docker.sh  docker-compose.yml  reverse-proxy-plan.md
catalog-server/: BACKGROUND_JOBS_PLAN.md  CATALOG_SQLITE_DESIGN.md  CHANGELOG_FEATURE_PLAN.md  Cargo.toml  DOWNLOAD_MANAGER_PLAN.md  Dockerfile  IMPLEMENTATION_PLAN.md  LISTENING_STATS_PLAN.md  MIGRATION_PROGRESS.md  PEZZOTTISEARCH_PLAN.md  PLAN-download-throttling.md  README.md  TODO.md  TOML_CONFIG_PLAN.md  USER_NOTIFICATIONS_IMPLEMENTATION.md  USER_NOTIFICATIONS_PLAN.md  build.rs  config.example.toml  config.spotify-test.toml  import_catalog.py
catalog-server/archived_docs/: BACKGROUND_JOBS_IMPLEMENTATION_PLAN.md  BACKGROUND_JOBS_PLAN.md  DOWNLOADER_PLAN.md  PLAN-download-throttling.md  TOML_CONFIG_PLAN.md
catalog-server/scripts/: fix-album-availability.py  fix-album-availability.sh  fix-track-artist-availability.py
catalog-server/scripts/.availability-fix-cache/: albums.json  audio_file_ids.json  computed_availability.json
catalog-server/src/: catalog_import.rs  cli_auth.rs  cli_search.rs  cli_style.rs  lib.rs  main.rs
catalog-server/src/agent/: mod.rs
catalog-server/src/agent/llm/: mod.rs  ollama.rs  openai.rs
catalog-server/src/agent/reasoning/: logger.rs  mod.rs
catalog-server/src/agent/tools/: mod.rs  registry.rs
catalog-server/src/agent/workflow/: executor.rs  mod.rs  state.rs
catalog-server/src/background_jobs/: audit_logger.rs  context.rs  handle.rs  job.rs  mod.rs  scheduler.rs
catalog-server/src/background_jobs/jobs/: audit_log_cleanup.rs  device_pruning.rs  expand_artists_base.rs  ingestion_cleanup.rs  integrity_watchdog.rs  missing_files_watchdog.rs  mod.rs  popular_content.rs  related_artists_enrichment.rs  whatsnew_batch.rs
catalog-server/src/catalog/: artist.rs  catalog.rs  image.rs  load.rs  mod.rs
catalog-server/src/catalog_store/: changelog.rs  legacy_adapter.rs  mod.rs  models.rs  null_store.rs  schema.rs  store.rs  trait_def.rs  validation.rs
catalog-server/src/config/: file_config.rs  mod.rs
catalog-server/src/download_manager/: audit_logger.rs  catalog_ingestion.rs  corruption_handler.rs  downloader_client.rs  downloader_types.rs  job_processor.rs  manager.rs  mod.rs  models.rs  queue_store.rs  retry_policy.rs  schema.rs  search_proxy.rs  sync_notifier.rs  throttle.rs  torrent_client.rs  torrent_types.rs  watchdog.rs
catalog-server/src/downloader/: client.rs  mod.rs  models.rs
catalog-server/src/ingestion/: converter.rs  file_handler.rs  fingerprint.rs  manager.rs  mod.rs  models.rs  notifier.rs  schema.rs  store.rs  tools.rs
catalog-server/src/mcp/: context.rs  handler.rs  mod.rs  protocol.rs  rate_limit.rs  registry.rs
catalog-server/src/mcp/resources/: changelog.rs  jobs.rs  mod.rs
catalog-server/src/mcp/tools/: analytics.rs  catalog.rs  debug.rs  jobs.rs  mod.rs  server.rs  users.rs
catalog-server/src/notifications/: mod.rs  models.rs  service.rs
catalog-server/src/oidc/: mod.rs
catalog-server/src/related_artists/: lastfm.rs  mod.rs  musicbrainz.rs
catalog-server/src/search/: factory.rs  fts5_levenshtein_search.rs  fts5_search.rs  levenshtein.rs  mod.rs  organic_indexer.rs  pezzott_hash.rs  relevance_filter.rs  resolve.rs  search_vault.rs
catalog-server/src/search/streaming/: enrichment.rs  mod.rs  pipeline.rs  sections.rs  (+1 more)
catalog-server/src/server/: config.rs  download_routes.rs  ingestion_routes.rs  metrics.rs  mod.rs  proxy.rs  search.rs  server.rs  session.rs  skeleton.rs  state.rs  stream_track.rs
catalog-server/src/server_store/: mod.rs  models.rs  schema.rs  sqlite_server_store.rs
catalog-server/src/skeleton/: mod.rs  models.rs  schema.rs  store.rs
catalog-server/src/sqlite_persistence/: versioned_schema.rs
catalog-server/src/user/: auth.rs  device.rs  mod.rs  permissions.rs  settings.rs  sqlite_user_store.rs  sync_events.rs  user_manager.rs  user_models.rs  user_store.rs
catalog-server/src/whatsnew/: notifier.rs
catalog-server/tests/: README.md  e2e_admin_jobs_tests.rs  e2e_auth_tests.rs  e2e_catalog_tests.rs  e2e_changelog_tests.rs  e2e_download_manager_tests.rs  e2e_listening_stats_tests.rs  e2e_notification_tests.rs  e2e_permissions_tests.rs  e2e_search_tests.rs  e2e_settings_tests.rs  e2e_skeleton_tests.rs  e2e_streaming_tests.rs  e2e_sync_tests.rs  e2e_user_content_tests.rs  e2e_websocket_sync_tests.rs
catalog-server/tests/common/: client.rs  constants.rs  fixtures.rs  mod.rs  server.rs
e2e/: run.sh  (+7 more)
pezzottify-catalog-server/: .gitignore  Cargo.toml
pezzottify-catalog-server/src/: cli_auth.rs  cli_search.rs  cli_style.rs  file_auth_store.rs  main.rs  pezzott_hash.rs
pezzottify-catalog-server/src/catalog/: album.rs  artist.rs  catalog.rs  image.rs  load.rs  mod.rs  track.rs
pezzottify-catalog-server/src/search/: mod.rs  pezzott_hash.rs  search_vault.rs
pezzottify-catalog-server/src/server/: auth.rs  config.rs  http_cache_layer.rs  mod.rs  requests_logging.rs  search.rs  server.rs  session.rs  state.rs  stream_track.rs  user.rs
pezzottify-catalog-server/src/sqlite_persistence/: mod.rs  sqlite_user_store.rs  versioned_schema.rs
pezzottify-catalog-server/src/user/: auth.rs  mod.rs  sqlite_user_store.rs  user_manager.rs  user_models.rs  user_store.rs
(+1343 files in other folders)
