[package]
name = "pezzottify-catalog-server"
version = "0.5.0"
edition = "2021"
default-run = "catalog-server"

[features]
default = []
no_search = [] # dev feature, the run is faster without building the search index
no_checks = [] # dev feature, ignore expensive catalog integrity checks
test-fast-hasher = [] # dev feature, fast password hasher for tests (DO NOT use in production!)
fast = ["no_search", "no_checks", "test-fast-hasher"]
slowdown = [] # dev feature, adds a slowdown layer in front of server routes

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.3"
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
byte-unit = "5.1.6"
chrono = "0.4.39"
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.31"
hyper = "1.6.0"
infer = "0.16.0"
lazy_static = "1.4"
prometheus = "0.13"
rand = "0.9.0"
rand_core = { version = "0.9.0", features = ["std"] }
rand_distr = "0.5.1"
rayon = "1.10.0"
regex = "1.10.2"
rsa = "0.9.7"
rusqlite = { version = "0.33.0", features = ["bundled"] }
rustyline = "17.0.1"
rustyline-derive = "0.11.1"
crossterm = "0.28"
unicode-width = "0.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
shlex = "1.3.0"
tempfile = "3.17.1"
time = "0.3.37"
toml = "0.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tower = "0.5.2"
tower_governor = "0.8"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11", features = ["v4"] }
walkdir = "2.5"
reqwest = { version = "0.12", features = ["json", "stream"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
http = "1.0"

[[bin]]
name = "catalog-server"
path = "src/main.rs"

[[bin]]
name = "cli-auth"
path = "src/cli_auth.rs"
