[package]
name = "pezzottify-catalog-server"
version = "0.1.0"
edition = "2021"
default-run = "catalog-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.8.1"
clap = { version = "4.4.11", features = ["derive"] }
infer = "0.16.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
unicode-segmentation = "1.12.0"

[[bin]]
name = "catalog-server"
path = "src/main.rs"

[[bin]]
name = "cli-search"
path = "src/cli_search.rs"
