[package]
name = "pezzottify-catalog-server"
version = "0.1.0"
edition = "2021"
default-run = "catalog-server"

[features]
default = []
no_search_index = [] # for dev purpuses, the run is faster without building the search index

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.3"
async-trait = "0.1.85"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
clap = { version = "4.4.11", features = ["derive"] }
infer = "0.16.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
regex = "1.10.2"
rsa = "0.9.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
shlex = "1.3.0"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
unicode-segmentation = "1.12.0"

[[bin]]
name = "catalog-server"
path = "src/main.rs"

[[bin]]
name = "cli-search"
path = "src/cli_search.rs"

[[bin]]
name = "cli-auth"
path = "src/cli_auth.rs"
