[package]
name = "pezzottify-catalog-server"
version = "0.1.0"
edition = "2021"
default-run = "catalog-server"

[features]
default = []
no_search = [] # dev feature, the run is faster without building the search index
no_checks = [] # dev feature, ignore expensive catalog integrity checks
fast = ["no_search", "no_checks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.3"
async-trait = "0.1.85"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
byte-unit = "5.1.6"
chrono = "0.4.39"
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.31"
hyper = "1.6.0"
infer = "0.16.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
rayon = "1.10.0"
regex = "1.10.2"
rsa = "0.9.7"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
shlex = "1.3.0"
tempfile = "3.17.1"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tower = "0.5.2"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1.12.0"

[[bin]]
name = "catalog-server"
path = "src/main.rs"

[[bin]]
name = "cli-search"
path = "src/cli_search.rs"

[[bin]]
name = "cli-auth"
path = "src/cli_auth.rs"
